--- a/index.html
+++ b/index.html
@@ -155,6 +155,54 @@
     </div>
     <!-- Smartphone section end -->
 
+    <!-- Laptop section start -->
+    <div class="container" id="Laptop">
+        <div class="row product2">
+            <div class="col-6">
+                <h2>Laptop</h2>
+            </div>
+            <div class="col-6">  
+                <h3 class="text-right">See All</h3>
+            </div>     
+        </div>
+         <div class="card-deck">
+            <div class="card">
+              <img src="imges/laptop/product-1.png" class="card-img-top" alt="Asus VivoBook">
+              <div class="card-body">
+                <h2 class="card-title">Asus VivoBook</h2>
+                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              </div>
+              <div class="text-center">
+                <h2>$999</h2>
+                <button>BUY NOW  →</button>
+              </div>
+            </div>
+            <div class="card">
+              <img src="imges/laptop/product-2.png" class="card-img-top" alt="Razer Blade 15">
+              <div class="card-body">
+                <h2 class="card-title">Razer Blade 15</h2>
+                <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+              </div>
+              <div class="text-center">
+                <h2>$2799</h2>
+                <button>BUY NOW  →</button>
+              </div>
+            </div>
+            <div class="card">
+              <img src="imges/laptop/product-3.png" class="card-img-top" alt="Xiaomi Mi NoteBook Pro">
+              <div class="card-body">
+                <h2 class="card-title">Xiaomi Mi NoteBook Pro</h2>
+                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+              </div>
+              <div class="text-center">
+                <h2>$999</h2>
+                <button>BUY NOW  →</button>
+              </div>
+            </div>
+          </div>  
+    </div>
+    <!-- Laptop section end -->
+
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
