categories section added

--- a/index.html
+++ b/index.html
@@ -203,6 +203,47 @@
     </div>
     <!-- Laptop section end -->
 
+    <!-- categories section start -->
+    <div class="container" id="Categories">
+        <div>
+            <h1 class="ctgh1">Categories</h1>
+            <hr>
+        </div>
+    
+        <div class="row subCategories">
+            <div class="col-4">
+                <div class="row ">
+                    <div class="col-2 bg1">
+                        <div class="card CCard" id="CCard1">
+                            <img src="imges/Categories/bag.png" id="Ccardimg"  alt="">
+                            <div class="card-body">
+                                <p class="card-text">Bag</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-2 bgshoe" >
+                        <div class=" card CCard" id="CCard2">
+                            <img src="imges/Categories/perfume.png"  id="Ccardimg"  alt="">
+                            <div class="card-body">
+                                <p class="card-text">Beauty</p>
+                            </div>
+                        </div>
+                        <div class="card CCard" id="CCard3">
+                            <img src="imges/Categories/shoe.png" id="Ccardimg"  alt="">
+                            <div class="card-body">
+                                <p class="card-text">Shoe</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-8">
+                <img src="imges/Categories/pale-order.png" class="paleorder img-fluid" alt="Pale Order">
+            </div>
+        </div>
+    </div>
+    <!-- categories section end -->
+
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
