categories completed and card border radius and bg color added

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                    
                          <div class="col-md-6">
                         
-                            <img src="imges/banner-products/product-1.png" class="d-block cimage" alt="Mackbook">
+                            <img src="imges/banner-products/product-1.png" class="d-block  cimage" alt="Mackbook">
                          </div>
                     </div>
                 </div>
@@ -118,8 +118,8 @@
             </div>     
          </div>
          <div class="card-deck">
-            <div class="card">
-              <img src="imges/phone/phone-1.png" class="card-img-top" alt="...">
+            <div class="card crdbr">
+              <img src="imges/phone/phone-2.png" class="card-img-top" alt="iPhone 11 Pro">
               <div class="card-body">
                 <h2 class="card-title">iPhone 11 Pro</h2>
                 <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
@@ -129,8 +129,8 @@
                 <button>BUY NOW  →</button>
               </div>
             </div>
-            <div class="card">
-              <img src="imges/phone/phone-2.png" class="card-img-top" alt="...">
+            <div class="card crdbr">
+              <img src="imges/phone/phone-3.png" class="card-img-top" alt="Samsung Galaxy Note10+">
               <div class="card-body">
                 <h2 class="card-title">Samsung Galaxy Note10+</h2>
                 <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
@@ -140,11 +140,11 @@
                 <button>BUY NOW  →</button>
               </div>
             </div>
-            <div class="card">
-              <img src="imges/phone/phone-3.png" class="card-img-top" alt="...">
+            <div class="card crdbr">
+              <img src="imges/phone/phone-1.png" class="card-img-top" alt="Redmi Note 9 Pro">
               <div class="card-body">
                 <h2 class="card-title">Redmi Note 9 Pro</h2>
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show.</p>
               </div>
               <div class="text-center">
                 <h2>$699</h2>
@@ -166,7 +166,7 @@
             </div>     
         </div>
          <div class="card-deck">
-            <div class="card">
+            <div class="card crdbr">
               <img src="imges/laptop/product-1.png" class="card-img-top" alt="Asus VivoBook">
               <div class="card-body">
                 <h2 class="card-title">Asus VivoBook</h2>
@@ -177,7 +177,7 @@
                 <button>BUY NOW  →</button>
               </div>
             </div>
-            <div class="card">
+            <div class="card crdbr">
               <img src="imges/laptop/product-2.png" class="card-img-top" alt="Razer Blade 15">
               <div class="card-body">
                 <h2 class="card-title">Razer Blade 15</h2>
@@ -188,7 +188,7 @@
                 <button>BUY NOW  →</button>
               </div>
             </div>
-            <div class="card">
+            <div class="card crdbr">
               <img src="imges/laptop/product-3.png" class="card-img-top" alt="Xiaomi Mi NoteBook Pro">
               <div class="card-body">
                 <h2 class="card-title">Xiaomi Mi NoteBook Pro</h2>
@@ -213,9 +213,9 @@
         <div class="row subCategories">
             <div class="col-4">
                 <div class="row ">
-                    <div class="col-2 bg1">
+                    <div class="col-2">
                         <div class="card CCard" id="CCard1">
-                            <img src="imges/Categories/bag.png" id="Ccardimg"  alt="">
+                            <img src="imges/Categories/bag.png" id="Ccardimg"  alt="Bag">
                             <div class="card-body">
                                 <p class="card-text">Bag</p>
                             </div>
@@ -223,13 +223,13 @@
                     </div>
                     <div class="col-2 bgshoe" >
                         <div class=" card CCard" id="CCard2">
-                            <img src="imges/Categories/perfume.png"  id="Ccardimg"  alt="">
+                            <img src="imges/Categories/perfume.png"  id="Ccardimg"  alt="Beauty">
                             <div class="card-body">
                                 <p class="card-text">Beauty</p>
                             </div>
                         </div>
                         <div class="card CCard" id="CCard3">
-                            <img src="imges/Categories/shoe.png" id="Ccardimg"  alt="">
+                            <img src="imges/Categories/shoe.png" id="Ccardimg"  alt="Shoe">
                             <div class="card-body">
                                 <p class="card-text">Shoe</p>
                             </div>
