bgimg add and project final touch

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <!-- Navbar Ended -->
 
     <!-- Carousel start -->
-    <div class="container">
+    <div class="container" id="slidere">
         <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
             <ol class="carousel-indicators">
               <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
@@ -122,6 +122,14 @@
     </div>
 
     <!-- Carousel end -->
+    
+      
+          <div id="bgimg">
+            <img src="imges/Group 1.png" class="img-fluid" alt="">
+          </div>
+
+  
+
     <!-- Smartphone section start -->
     <div class="container" id="smartphone">
         <div class="row">
